# ROS2_Course

actions_cpp/: CMakeLists.txt  package.xml
actions_cpp/src/: count_until_client.cpp  count_until_server.cpp  count_until_server_queue_goals.cpp  move_robot_client.cpp  move_robot_server.cpp
actions_py/: package.xml  setup.py
actions_py/actions_py/: count_until_client.py  count_until_server.py  move_robot_client.py  move_robot_server.py
components_cpp/: CMakeLists.txt  package.xml
components_cpp/src/: manual_composition.cpp  node1.cpp  node2.cpp  number_publisher.cpp
components_py/: package.xml  setup.py
components_py/components_py/: manual_composition.py  node1.py
executors_cpp/: CMakeLists.txt  package.xml
executors_cpp/src/: multi_threaded_executor.cpp  single_threaded_executor.cpp
executors_py/: package.xml  setup.py
executors_py/executors_py/: multi_threaded_executor.py  number_publisher.py  single_threaded_executor.py
lifecycle_cpp/: CMakeLists.txt  package.xml
lifecycle_cpp/src/: lifecycle_move_robot_server.cpp  number_publisher.cpp
lifecycle_py/: package.xml  setup.py
lifecycle_py/lifecycle_py/: lifecycle_move_robot_server.py  lifecycle_node_manager.py  move_robot_node_manager.py  number_publisher.py
my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/src/: ROS2_C++_Template.cpp  add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery.cpp  hw_status_publisher.cpp  led_panel.cpp  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: ROS2_Python_Template.py  add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery.py  hw_status_publisher.py  led_panel.py  my_first_node.py  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: components.launch.py  components.launch.xml  lifecycle_move_robot.launch.xml  lifecycle_test.launch.py  lifecycle_test.launch.xml  my_robot_gazebo.launch.xml  number_app.launch.py  robot_news_station_app.launch.py  turtle_advanced.launch.xml  turtle_catch_them_all_cpp.launch.py  turtlebot.launch.xml
my_robot_bringup/worlds/: test_world.world
my_robot_description/: package.xml
my_robot_description/launch/: display.launch.py  display.launch.xml
my_robot_description/rviz/: rviz_config.rviz
my_robot_description/urdf/: arm.xacro  arm_gazebo.xacro  camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro  (+1 more)
my_robot_interfaces/: CMakeLists.txt  package.xml
turtlesim_catch_them_all_cpp/: CMakeLists.txt  package.xml
turtlesim_catch_them_all_cpp/src/: turtle_advanced_controller.cpp  turtle_controller.cpp  turtle_spawner.cpp  turtlebot_controller.cpp
(+5 files in other folders)
